Bug 991073 - Fix squished buttons on in-content preferences. r=jaws
UltraBlame original commit: bd4f141891a9e7aded028ef4ac897503db645d59

--- a/browser/themes/shared/in-content/preferences.css
+++ b/browser/themes/shared/in-content/preferences.css
@@ -3885,22 +3885,6 @@ start
 36px
 ;
 }
-#
-chooseFolder
-{
-margin
--
-top
-:
-5px
-;
-margin
--
-bottom
-:
-5px
-;
-}
 /
 *
 Applications
@@ -4537,50 +4521,6 @@ width
 5
 .
 5em
-;
-}
-/
-*
-Security
-Pane
-*
-/
-/
-*
-Add
-margins
-to
-this
-buttons
-to
-unsqueeze
-the
-checkboxed
-in
-same
-hbox
-*
-/
-#
-addonExceptions
-#
-cookieExceptions
-#
-passwordExceptions
-#
-changeMasterPassword
-{
-margin
--
-top
-:
-4px
-;
-margin
--
-bottom
-:
-5px
 ;
 }
 /
